# Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  Renderer.sln  Renderer.vcxproj  Renderer.vcxproj.filters
GeometryProcessing/: CMakeLists.txt
GeometryProcessing/src/: GeometryProcessing.h  MathCore.h
GeometryProcessing/src/Math/: Matrix.cpp  Matrix.h  Vector.cpp  Vector.h
GeometryProcessing/src/Primitives/: HalfEdge.cpp  HalfEdge.h  Vertex.cpp  Vertex.h  VertexFactory.cpp  VertexFactory.h
RenderEngine/: CMakeLists.txt
RenderEngine/src/: Application.cpp  Application.h  Camera.cpp  Camera.h  EntryPoint.h  OdaTimer.h  RenderEngine.h  TestApp.cpp  TestApp.h
RenderEngine/src/Editor/: Editor.cpp  Editor.h  EditorWindow.cpp  EditorWindow.h
RenderEngine/src/Editor/Windows/: Editor_Scene.cpp  Editor_Scene.h
RenderEngine/src/Errors/: DXGIInfoManager.cpp  DXGIInfoManager.h  DXGIMessageMap.h  GraphicsExceptions.h  RomanceException.h  WindowExceptions.h
RenderEngine/src/Graphics/: Graphics.cpp  Graphics.h  RenderGraphBuilder.cpp  RenderGraphBuilder.h  RenderResourcePool.cpp  RenderResourcePool.h  Renderer.cpp  Renderer.h
RenderEngine/src/Graphics/Bindables/: BindablesCommon.h  BlendState.cpp  BlendState.h  ConstantBuffers.h  DepthStencilState.cpp  DepthStencilState.h  IBindable.h  IndexBuffer.cpp  IndexBuffer.h  InputLayout.cpp  InputLayout.h  Sampler.cpp  Sampler.h  Shaders.cpp  Shaders.h  Texture.cpp  Texture.h  Topology.cpp  Topology.h  TransformCBuffer.cpp  TransformCBuffer.h  VertexBuffer.cpp  VertexBuffer.h
RenderEngine/src/Graphics/Meshes/: GeometryFactory.cpp  GeometryFactory.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PrimitiveMesh.cpp
RenderEngine/src/Graphics/Resources/: ShaderResource.cpp  ShaderResource.h
RenderEngine/src/Graphics/Resources/Views/: ResourceView.cpp  ResourceView.h
RenderEngine/src/Graphics/Types/: IDrawable.cpp  IDrawable.h  ModelDrawable.cpp  ModelDrawable.h  PrimitiveGeometry.cpp  PrimitiveGeometry.h
RenderEngine/src/IO/: Keyboard.h
RenderEngine/src/Math/: Math.cpp  Math.h  Transform.h
RenderEngine/src/Scene/: Camera.cpp  Camera.h  EntityNode.cpp  EntityNode.h  MeshEntity.cpp  MeshEntity.h  Scene.cpp  Scene.h
RenderEngine/src/Utility/: OdaTimer.h
RenderEngine/src/Window/: Window.cpp  Window.h
RenderEngine/src/Window/IO/: InputHandler.cpp  InputHandler.h  Mouse.cpp  Mouse.h
shaders/: Shaders.hlsl  fullscreenquad.hlsl
src/: Camera.cpp  Camera.h  Core.h  EntryPoint.cpp  EntryPoint.h  OdaTimer.h  TestApp.cpp  TestApp.h  Window.cpp  Window.h
src/Errors/: DXGIInfoManager.h  DXGIMessageMap.cpp  GraphicsExceptions.h  WindowsMessageMap.h
src/Graphics/: Graphics.cpp  Graphics.h  RenderResourcePool.h
src/Graphics/Bindables/: BindablesCommon.h  ConstantBuffers.h  IndexBuffer.cpp  InputLayout.cpp  InputLayout.h  Shaders.cpp  TransformCBuffer.cpp  TransformCBuffer.h  VertexBuffer.cpp  VertexBuffer.h
src/Graphics/Meshes/: PrimitiveMesh.cpp  PrimitiveMesh.h
src/Graphics/Types/: IDrawable.cpp  IDrawable.h  PrimitiveGeometry.cpp  PrimitiveGeometry.h
src/IO/: Keyboard.cpp
src/Utility/: WICTextureLoader.cpp
tests/: CMakeLists.txt  TestApplication.cpp
